--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <script>
     // Paste Own API Key from AccuWeather
-    const API_KEY = "RNBUPAl0up6GGVwcyeeaGmJImr3dpiTM";
+    const API_KEY = "YOUR_KEY_HERE";
 
     // Variables to monitor Temp and Units
     let currTempC = null;
@@ -151,4 +151,5 @@
 </script>
 
 </body>
+
 </html>
