--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             humidityP.textContent = `Humidity: ${humidity}%`;
             resultDiv.appendChild(humidityP);
 
-            // Wind SPeed
+            // Wind Speed
             const windP = document.createElement("p");
             windP.textContent = `Wind: ${wind} km/h`;
             resultDiv.appendChild(windP);
@@ -188,3 +188,4 @@
 </body>
 
 </html>
+
